--- a/index.html
+++ b/index.html
@@ -1,28 +1,34 @@
 <html>
+  <head>
+    <title>Parcel Sandbox</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
+      integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
+      crossorigin="anonymous"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Orbitron"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Merienda"
+      rel="stylesheet"
+    />
+  </head>
 
-<head>
-	<title>Parcel Sandbox</title>
-	<meta charset="UTF-8" />
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
-	 crossorigin="anonymous">
-	<link href="https://fonts.googleapis.com/css?family=Orbitron" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Merienda" rel="stylesheet">
-</head>
+  <body>
+    <div id="app"></div>
 
-<body>
-	<div id="app"></div>
+    <script src="https://unpkg.com/ionicons@4.4.4/dist/ionicons.js"></script>
+    <script src="src/index.js"></script>
 
-	<script src="https://unpkg.com/ionicons@4.4.4/dist/ionicons.js">
+    <!--
+      <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js">
+    -->
 
-	</script>
-	<script src="src/index.js">
-
-	</script>
-
-
-	<script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js">
-
-	</script>
-</body>
-
+    <!-- </script> -->
+  </body>
 </html>
